Add UI for finding class files on disk

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,6 +32,7 @@
 
 
 <p><a href="/server" th:href="@{/server}">Server Info</a></p>
+<p><a href="/server" th:href="@{/class}">Find Location of Class On Disk</a></p>
 </body>
 </html>
 
