Added CSS so it's now just mostly ugly

--- a/src/main/resources/templates/crash.html
+++ b/src/main/resources/templates/crash.html
@@ -3,6 +3,7 @@
 <head>
     <title>Crash Result</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="crash-dummy.css" />
 </head>
 <body>
 <p>Command Executed</p>
