--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Crash Dummy Result</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="crash-dummy.css" />
 </head>
 <body>
 <h1>Crash Dummy Crash Result</h1>
