--- a/src/main/resources/templates/clazz.html
+++ b/src/main/resources/templates/clazz.html
@@ -3,6 +3,7 @@
 <head>
     <title>Crash Dummy</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="crash-dummy.css" />
 </head>
 <body>
 <h1>Crash Dummy</h1>
